# devtool

./: .devtool.yaml  Cargo.toml  Cross.toml  DEV.md  README.md  dev.sh
.github/workflows/: ci.yaml  release.yaml
devtool/: Cargo.toml
devtool-git/: Cargo.toml
devtool-git/src/: description.rs  lib.rs  wrapper.rs
devtool-version/: Cargo.toml
devtool-version/src/: lib.rs  version.rs
devtool/src/: app.rs  args.rs  constants.rs  fs_util.rs  main.rs  project_info.rs  run.rs  version.rs
devtool/src/commands/: bump_version.rs  generate_config.rs  generate_ignore.rs  mod.rs  scratch.rs  show_description.rs
devtool/src/git/: wrapper.rs
devtool/src/logging/: entry.rs  funcs.rs
devtool/src/serialization/: config.rs  mod.rs
src/: app.rs  args.rs  git_description.rs  main.rs  product_info.rs  result.rs  show.rs  util.rs  version.rs
src/commands/: bump_version.rs  generate_ignore.rs  increment_tag.rs  mod.rs  scratch.rs  show_description.rs
src/git/: description.rs  mod.rs  wrapper.rs
src/logging/: entry.rs  logger.rs  mod.rs
