[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool"
edition = "2021"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool"
repository = "https://github.com/rcook/devtool"
version = "0.0.17"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
joatmon = "0.0.29"
log = { version = "0.4.18", features = ["std"] }
path-absolutize = "3.1.0"
rstest = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml_edit = "0.19.10"
