[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool - Git Support"
edition = "2021"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool-git"
repository = "https://github.com/rcook/devtool"
version = "0.0.30"

[dependencies]
anyhow = "1.0.94"
log = "0.4.22"
thiserror = "2.0.4"

[dev-dependencies]
rstest = "0.23.0"
