[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool - Git Support"
edition = "2024"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool-git"
repository = "https://github.com/rcook/devtool"
version = "0.0.30"

[dependencies]
anyhow = "1.0.95"
log = "0.4.25"
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
