[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool - Version Support"
edition = "2021"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool-version"
repository = "https://github.com/rcook/devtool"
version = "0.0.30"

[dependencies]
anyhow = "1.0.95"
serde = "1.0.217"
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.24.0"
