[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool - Version Support"
edition = "2024"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool-version"
repository = "https://github.com/rcook/devtool"
version = "0.0.31"

[dependencies]
anyhow = "1.0.95"
serde = "1.0.217"
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.24.0"
serde_json = "1.0.138"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
