[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool - Version Support"
edition = "2024"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool-version"
repository = "https://github.com/rcook/devtool"
version = "0.0.31"

[dependencies]
anyhow = "1.0.102"
serde = "1.0.228"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26"
serde_json = "1.0.149"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
