[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool"
edition = "2021"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool"
repository = "https://github.com/rcook/devtool"
version = "0.0.30"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
devtool-git = { path = "../devtool-git" }
devtool-version = { path = "../devtool-version" }
joatmon = "0.0.34"
lazy_static = "1.5.0"
log = { version = "0.4.25", features = ["std"] }
path-absolutize = "3.1.1"
rstest = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
toml_edit = "0.22.23"
