[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Development Tool"
edition = "2024"
homepage = "https://github.com/rcook/devtool"
keywords = ["general"]
license = "MIT"
name = "devtool"
repository = "https://github.com/rcook/devtool"
version = "0.0.31"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
devtool-git = { path = "../devtool-git" }
devtool-version = { path = "../devtool-version" }
joatmon = "0.0.34"
log = { version = "0.4.25", features = ["std"] }
path-absolutize = "3.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
toml_edit = "0.22.23"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "deny", priority = -1 }
